syntax = "proto3";

package proto;

option go_package = "./;proto";

import "validate/validate.proto";

message SimpleRequest {
  string name = 1 [(validate.rules).string.min_len = 1]; // name不能为空
  int32 age = 2 [(validate.rules).int32.gt = 0]; // age > 0
}

message SimpleResponse {
  string message = 1;
}

service SimpleService {
  rpc GetInfo (SimpleRequest) returns (SimpleResponse);
}
